# equimetrics

./: README.md
firmware/v1/: firmware_v2.ino
firmware/v2/: Cargo.toml
firmware/v2/src/: main.rs
software/: udp_api.py  video_capture.py
