[package]
name = "spirit-rust-firmware"
version = "0.1.0"
authors = ["Jonas Pöhler <jonas.poehler@uni-siegen.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "spirit-rust-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false , features = ["nightly"]}
esp-idf-hal = "0.44.1"
mpu6050 = "0.1.6"
anyhow = "1.0.86"
embedded-hal = "0.2.7"
embedded-svc = "0.28.0"
heapless = "0.8.0"
esp-idf-sys = "0.35.0"
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[build-dependencies]
embuild = "0.32.0"